Added 'stylus' task and more

--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -1,9 +1,14 @@
 doctype html
 html
   head
+    title vue-sample
     meta(charset="utf-8")
+    //inject:css
+    //endinject
+    style(src="/styles/app.css")
   body
-  div.wrapper
+    div.wrapper
 
-  // injectj:js
-  // endinject
+    // inject:js
+    // endinject
+    script(src="/scripts/app.js")
