Added webpack and refactor configuration value

--- a/src/jade/base/_layout.base.jade
+++ b/src/jade/base/_layout.base.jade
@@ -5,11 +5,11 @@ html
     meta(charset="utf-8")
     //inject:css
     //endinject
-    style(src="/styles/app.css")
+    style(src="/css/app.css")
   body
     div.wrapper
       block main
 
     // inject:js
     // endinject
-    script(src="/scripts/app.js")
+    script(src="/js/app.js")
