--- a/src/jade/base/_layout.base.jade
+++ b/src/jade/base/_layout.base.jade
@@ -5,9 +5,9 @@ html
     meta(charset="utf-8")
     //inject:css
     //endinject
-    style(src="/css/app.css")
+    link(href="/css/app.css",  rel="stylesheet")
   body
-    div.wrapper
+    div.l-wrapper
       block main
 
     // inject:js
