--- a/src/jade/views/index.jade
+++ b/src/jade/views/index.jade
@@ -1,4 +1,21 @@
 extends /base/_layout.base.jade
 
 block main
-  h1 トップページ
+  h1.c-headline TODOサンプル
+  section.m-section.m-section--border
+    div.m-register
+      div.m-register__heading
+        h2.c-heading 新規登録
+      div.m-register__form
+        div.m-register__input
+          input.c-input(type="text")
+        div.m-register__btn
+          a.c-btn.c-btn-radius.c-btn-submit 登録
+  section.m-section
+    h2.c-heading TODOリスト
+    ul.m-list
+      li.m-list__item
+        div.m-item
+          p.m-item__title TODOタイトル
+          p.m-item__btn
+            a.c-btn.c-btn-radius.c-btn-delete 削除
