Modified around webpack

--- a/src/jade/base/_layout.base.jade
+++ b/src/jade/base/_layout.base.jade
@@ -10,6 +10,6 @@ html
     div.l-wrapper
       block main
 
-    // inject:js
-    // endinject
+    //- inject:js
+    //- endinject
     script(src="/js/app.js")
