Added alert function for test

--- a/src/jade/views/index.jade
+++ b/src/jade/views/index.jade
@@ -10,7 +10,7 @@ block main
         div.m-register__input
           input.c-input(type="text")
         div.m-register__btn
-          a.c-btn.c-btn-radius.c-btn-submit 登録
+          a.c-btn.c-btn-radius.c-btn-submit(v-on="click: alert") 登録
   section.m-section
     h2.c-heading TODOリスト
     ul.m-list
