--- a/src/css/stylus/app.styl
+++ b/src/css/stylus/app.styl
@@ -6,6 +6,7 @@
 @import 'components/_heading'
 @import 'components/_btn'
 @import 'components/_form'
+@import 'components/_tab'
 
 @import 'modules/_section'
 @import 'modules/_register'
